Prepare for localization of shell scripts

--- a/gmtkbabel.conf
+++ b/gmtkbabel.conf
@@ -8,3 +8,8 @@ DIR=~
 
 # Default log *base* name
 FNAME=`date +%Y-%m-%d_%H:%M`
+
+
+# *** Don't touch these, needed for localization ***
+export TEXTDOMAINDIR=/usr/share/locale/
+export TEXTDOMAIN=gmtkbabel
