Add gettext infrastructure to autotools

--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,8 @@
 AC_INIT([gmtkbabel], [0.1], [d.paleino+gmtkbabel@gmail.com])
 AC_CONFIG_AUX_DIR([build-aux])
 AM_INIT_AUTOMAKE([foreign -Wall -Werror])
+AM_GNU_GETTEXT_VERSION([0.18.1])
+AM_GNU_GETTEXT([external])
 
 AC_CHECK_PROGS([BASH], [bash], [:])
 if test "$BASH" = :; then
@@ -20,6 +22,7 @@ fi
 AC_CONFIG_FILES([
 Makefile
 po/Makefile
+po/Makefile.in
 src/Makefile
 ])
 AC_OUTPUT
