--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: David Paleino <dapal@debian.org>
 Build-Depends: debhelper (>= 7.0.50~)
  , gettext
 Standards-Version: 3.9.1
-Homepage: http://dpaleino.github.com/gmtkbabel
+Homepage: https://dpaleino.github.com/gmtkbabel
 Vcs-Git: git://github.com/dpaleino/gmtkbabel.git
 Vcs-Browser: http://github.com/dpaleino/gmtkbabel
 
