--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: gmtkbabel
 Section: utils
 Priority: optional
 Maintainer: David Paleino <dapal@debian.org>
-Build-Depends: debhelper (>= 12~)
+Build-Depends: debhelper-compat (= 12)
  , gettext
 Standards-Version: 3.9.1
 Homepage: https://dpaleino.github.com/gmtkbabel
