--- a/debian/control
+++ b/debian/control
@@ -6,8 +6,8 @@ Build-Depends: debhelper-compat (= 12)
  , gettext
 Standards-Version: 3.9.1
 Homepage: https://dpaleino.github.com/gmtkbabel
-Vcs-Git: git://github.com/dpaleino/gmtkbabel.git
-Vcs-Browser: http://github.com/dpaleino/gmtkbabel
+Vcs-Git: https://github.com/dpaleino/gmtkbabel.git
+Vcs-Browser: https://github.com/dpaleino/gmtkbabel
 
 Package: gmtkbabel
 Architecture: all
