--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: gmtkbabel
 Section: utils
 Priority: optional
 Maintainer: David Paleino <dapal@debian.org>
-Build-Depends: debhelper (>= 7.0.50~)
+Build-Depends: debhelper
  , gettext
 Standards-Version: 3.9.1
 Homepage: http://dpaleino.github.com/gmtkbabel
